[package]
name = "qoqo_mock"
version = "0.2.0"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2018"
categories = ["science", "simulation","ffi"]
description = "Python interface of roqoqo mocked backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qoqo_mock"
path = "src/lib.rs"
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.14"
features = ["num-complex"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.15"
thiserror = "1.0"
qoqo_calculator = {version="0.3"}

qoqo_calculator_pyo3 = {version="0.4", default-features=false}

qoqo-macros = {version="0.6", path="../qoqo-macros"}
roqoqo = {version="0.6", features=["serialize", "overrotate"]}
numpy = "=0.14"
bincode = "1.3"
serde_json = "1.0"



[features]
extension-module = ["pyo3/extension-module"]#, "qoqo_calculator_pyo3/extension-module"]
default = ["extension-module"]

[package.metadata.maturin]
requires-dist = ["numpy"]
maintainer = "HQS Quantum Simulations GmbH"
maintainer-email = "info@quantumsimulations.de"
requires-python = ">=3.6"