[project]
name = "qoqo_mock"
version = "0.5.5"
description = ""
authors = [{name="HQS Quantum Simulation GmbH", email="info@quantumsimulations.de"}]
readme = "README.md"
license = { text="Apache-2.0" }
dependencies = [
    "qoqo_calculator_pyo3>=1.1.0",
    "qoqo>=1.4",
    "numpy",
]
[project.optional-dependencies]
tests = [
  'pytest',
  'pytest-cov',
]
dev = [
    'flake8',
    'flake8-bugbear',
    'flake8-pyproject',
    'flake8-pydocstyle',
    'flake8-bandit',
    'flake8-pyproject',
    'darglint',
    'bandit',
    'mypy',
    'black'
]

docs = [
    "sphinx >= 2.1",
    "nbsphinx",
    "pygments",
    "recommonmark",
    "myst_parser",
    "sphinx_rtd_theme"
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.flake8]
ignore = ['D400', 'D401', 'W503', 'ANN101', 'ANN102', 'ANN002', 'ANN003', 'ANN401', 'S403', 'S404', 'S301']
max-line-length = 100
exclude = ['.git', '__pycache__', 'doc/conf.py', 'old', 'build', 'dist', 'test_*']
docstring-convention = "google"
per-file-ignores = [
    '__init__.py:F401',
]

[tool.mypy]
ignore_missing_imports = true
pretty = true
follow_imports = "silent"

[tool.bandit]

