[package]
name = "roqoqo-mock"
version = "0.2.1"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2018"
categories = ["science", "simulation"]
readme = "../README.md"
repository = "https://github.com/HQSquantumsimulations/qoqo"
description = "Mocked interface for roqoqo rust quantum computing toolkit"
exclude = ["tests*", "*.code-workspace"]

[lib]
name = "roqoqo_mock"
path = "src/lib.rs"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roqoqo = {version="0.8.2", features=["serialize"]}
qoqo_calculator = { version="0.5"}
rand = "0.8"
num-complex = {version = "0.4"}
roqoqo-test = {version="0.8.2"}


[dev.dependencies]
nalgebra = "0.29"
