[package]
name = "roqoqo-mock"
version = "0.4.6"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2018"
categories = ["science", "simulation"]
readme = "README.md"
repository = "https://github.com/HQSquantumsimulations/qoqo"
description = "Mocked interface for roqoqo rust quantum computing toolkit"
include = ["src*", "LICENSE", "README.md"]

[lib]
name = "roqoqo_mock"
path = "src/lib.rs"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roqoqo = {version="0.11.3", features=["serialize"]}
qoqo_calculator = { version="0.6"}
rand = "0.8"
num-complex = {version = "0.4"}
roqoqo-test = {version="0.10.0"}
