[package]
name = "roqoqo-mock"
version = "0.5.10"
authors = ["HQS Quantum Simulations <info@quantumsimulations.de>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.70"
categories = ["science", "simulation"]
readme = "README.md"
repository = "https://github.com/HQSquantumsimulations/qoqo"
description = "Mocked interface for roqoqo rust quantum computing toolkit"
include = ["src*", "LICENSE", "README.md"]

[lib]
name = "roqoqo_mock"
path = "src/lib.rs"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roqoqo = { version = "1.21", features = ["serialize"] }
roqoqo-test = { version = "1.21" }

rand = "0.9"
num-complex = { version = "0.4" }
